--- a/scripts/configuration.json
+++ b/scripts/configuration.json
@@ -1,13 +1,20 @@
 {
     "environments": [
         "corporate",
-        "technology",
+        "technology"
     ],
 
     "corporate": {
-        "hr":  {"id": "120"}, "it":  {"id": "110"}, "finance": {"id": "300"}
+        "it":  {"id": "10"}, "hr":  {"id": "20"}, "finance": {"id": "30"}
     },
+
+
+
+
+
+
     "technology": {
-        "audit":  {"id": "100"}, "dev":  {"id": "110"}
+        "audit":  {"id": "40"}, "dev":  {"id": "50"}
+
     }
 }
