Fix try/except functionality

--- a/corporate/ansible_playbooks/webfilter_url_playbooks/hr_webfilter_add_url.yaml
+++ b/corporate/ansible_playbooks/webfilter_url_playbooks/hr_webfilter_add_url.yaml
@@ -96,6 +96,14 @@
           web_proxy_profile: hr_profile
           referrer-host: ''
         - id: '10'
+          url: legalhelp.com
+          type: simple
+          action: allow
+          status: enable
+          exempt: pass
+          web_proxy_profile: hr_profile
+          referrer-host: ''
+        - id: '11'
           url: '*'
           type: wildcard
           action: block
